--- a/Computer_vision_poker_last_version.ipynb
+++ b/Computer_vision_poker_last_version.ipynb
@@ -112,40 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please, input patj to the picture: /home/michael/programming/Python/Computer Vision/image.png\n",
-      "368\n",
-      "\f",
-      "\n",
-      "14,287\n",
-      "\f",
-      "\n",
-      "940\n",
-      "\f",
-      "\n",
-      "396\n",
-      "\f",
-      "\n",
-      "132\n",
-      "\f",
-      "\n",
-      "132\n",
-      "\f",
-      "\n",
-      "132\n",
-      "\f",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "image = input('Please, input patj to the picture: ')\n",
+    "image = input('Please, input path to the picture: ')\n",
     "image = Image.open(image)\n",
     "image = image.convert('L')\n",
     "\n",
@@ -232,13 +203,6 @@
     "with open('data.json', 'w') as fp:\n",
     "    json.dump(future_json, fp,  indent=4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
